data/all_generated_tests/raw_wast_tests/call_StackCorruption_3253.wast
;; **Test 2**: Call a function with fewer arguments than required. - **Constraint Checked**: Argument type validation. - **Stack Corruption Risk**: Underflow in argument consumption could lead to executing with an insufficient stack frame, causing incorrect data to be accessed.

(assert_invalid
  (module
    (type (func (param i32 i32)))
    (func $call-fewer-args (param i32)
      (call 0 (local.get 0))
    )
  )
  "type mismatch"
)